Post content on homepage and /[username]

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -183,10 +183,11 @@ button.btn-logo {
 .card-img-center {
   width:20%;
   display:block;
-  margin:auto;
+  position: relative;
+  margin: auto;
   border-radius: 50%;
   max-width: 150px;
-}
+} 
 
 .card-info {
   color: white;
